[package]
name = "rust-order-book"
version = "0.0.1"
edition = "2021"
repository = 'https://github.com/fasenderos/rust-order-book'
homepage = 'https://github.com/fasenderos/rust-order-book'
description = "A Rust Lmit Order Book for high-frequency trading (HFT)."
keywords = [
    "orderbook",
    "limit-order-book",
    "order-book",
    "rust-order-book",
    "matching-algorithm",
    "matching-engine",
    "trading-algorithm",
    "hft-trading",
    "exchange",
    "lob",
    "trading",
    "finance",
]
categories = ["finance", "algorithms", "data-structures", "cryptography::cryptocurrencies"]
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
rb_tree = "0.5.0"
thiserror = "2.0.15"
uuid = { version = "1.18.0", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.2"

[[bench]]
name = "ob_benchmark"
harness = false
