[package]
name = "rust-order-book"
version = "0.0.2"
edition = "2021"
authors = ["Andrea Fassina <fasenderos@gmail.com>"]
description = "A Rust Lmit Order Book for high-frequency trading (HFT)."
license = "MIT"
repository = 'https://github.com/fasenderos/rust-order-book'
homepage = 'https://github.com/fasenderos/rust-order-book'
documentation = "https://docs.rs/rust-order-book"
keywords = [
    "orderbook",
    "limit-order-book",
    "matching-engine",
    "trading-algorithm",
    "exchange"
]
categories = ["finance", "algorithms", "data-structures", "cryptography::cryptocurrencies"]
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
limitbook = "0.1.0"
lobster = "0.7.0"
orderbook-rs = "0.2.0"
pricelevel = "0.2.0"
rand = "0.9.2"
rust_decimal = { version = "1.37.2", features = ["macros"] }
serde_json = "1.0"
uuid = "1.18.0"

[[bench]]
name = "benchmark"
harness = false
